# vacancy

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: sample_vacancies.json
src/api/: abstract_api.py  fallback_hh_api.py  hh_api.py
src/models/: vacancy.py
src/storage/: abstract_storage.py  json_storage.py
src/utils/: helpers.py
tests/: test_api.py  test_edge_cases.py  test_salary_logic.py  test_storage.py  test_utils.py  test_vacancy.py
